# social_b_matching

./: README.md  b_matching_benchmark.py  b_matching_test.py  inclusive_b_matching.md  pyproject.toml  toy_example.py
social_b_matching/: __init__.py  b_matching.py
